--- a/main.css
+++ b/main.css
@@ -1,18 +1,19 @@
 body {
   font-family: "Roboto Condensed", sans-serif;
 	background-color: green;
+	position: relative;
 }
 
 p {
-  font-size: 2rem; }
+  font-size: 2.6rem; }
 
 .site {
 	margin: 0 auto;
 	max-width: 1600px;
   background-color: ghostwhite;
   background-z-index: 2;
-  margin-bottom: 330px;
-  padding-bottom: 0px }
+	margin-bottom: 420px;
+  padding-bottom: 30px }
 
 .second {
   position: relative;
@@ -33,6 +34,9 @@ p {
 video {
 	width: 100%;
 	height: 100%;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 header {
   position: relative;
@@ -192,7 +196,121 @@ footer {
 input, textarea {
 	color: black;
 }
+.black-box {
+	position: fixed;
+	background-color: rgba(0,0,0,.9);
+	width: 100%;
+	height: 100vh;
+	bottom: 0;
+	z-index: 100000;
+	display: flex;
+	opacity: 0;
+	justify-content: center;
+	align-items: center;
+	padding: 1% 3%;
+	transition: all 500ms ease-in-out; 
+	pointer-events: none;
+}
+.black {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+.black p,
+.black h1,
+.black h2{
+	color: white;
+}
+.black p {
+	font-size: 2rem;
+}
+.black h1,
+.black h2{
+	width: 100%;
+	text-align: center;
+	color: green;
+	font-weight: bold;
+	letter-spacing: 4px;
+	text-shadow: 1px 1px 5px white;
+}
+.black h1 {
+	font-size: 6rem;
+}
+.ion-close-round{
+	font-size: 5rem;
+	color: rgba(255,255,255,.9);
+	position: absolute;
+	left: 40px;
+	top: 0px;
+}
+.opacity {
+	opacity: 1;
+	pointer-events: all;
+}
+.about{
+	display: inline-block;
+}
+table {
+	width: 90%;
+	height: 20%;
+	color: white;
+	margin: 0 auto;
+}
+
+th{
+	margin-left: 20px;
+	font-size: 3.5rem;
+	text-align: center;
+	text-shadow: 1px 1px 10px green;
+}
+td{
+	max-width: 300px;
+	margin-left: 20px;
+	font-size: 2rem;
+	text-align: center;
+}
 @media(max-width: 767px){
+.black {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+.black p {
+	font-size: 1.3rem;
+}
+
+.black h1 {
+	font-size: 2rem;
+}
+.ion-close-round{
+	font-size: 2rem;
+	left: 10px;
+	top: 10px;
+}
+table {
+	width: 90%;
+	height: 20%;
+	color: white;
+	margin: 0 auto;
+}
+
+th{
+	margin-left: 20px;
+	font-size: 1.5rem;
+	text-align: center;
+	text-shadow: 1px 1px 10px green;
+}
+td{
+	max-width: 300px;
+	margin-left: 20px;
+	font-size: 1rem;
+	text-align: center;
+}	
+	
 
 .info-tag {
   width: 100px;
@@ -206,7 +324,7 @@ input, textarea {
 }
 	
 	.after-pics p, .second p {
-		font-size: 1.3rem;
+		font-size: 1.4rem;
 	}
 		.after-pics, .second {
 		padding: 1px 20px;
@@ -258,7 +376,7 @@ input, textarea {
 	
 }
 
-@media(min-width: 769px){
+@media(min-width: 768px){
 	.mobile-footer{
 		display: none;
 	}
@@ -268,6 +386,7 @@ input, textarea {
 .ion-social-linkedin,.ion-social-twitter,.ion-social-facebook{
 	font-size: 2rem;
 }
+	
 }
 @media(min-width: 1600px){
 	footer {
