--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ p {
   font-size: 6rem;
   position: absolute;
   top: -100px;
-  left: calc(50% - 50px); 
+  left: calc(50% - 25px); 
 	z-index: 99999;
 	color: white;
 	-webkit-transition: all .2s ease-in-out;
@@ -50,15 +50,12 @@ header {
   min-height: 400px;
   min-widht: 100;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
   -webkit-box-align: center;
-  -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
   overflow: hidden; 
@@ -102,7 +99,7 @@ section {
 .info-tag {
   background-color: black;
   width: 300px;
-  padding: 0px 40px;
+  padding: 0px 40px 0px 10px;
   position: absolute;
   bottom: 15px;
   color: white;
@@ -112,9 +109,14 @@ section {
   display: none; }
 
 .info-tag p {
-  font-size: 2rem;
-  letter-spacing: 4px;
+  font-size: 1.6rem;
+  letter-spacing: 2px;
   margin-top: 10px; 
+}
+#image-heading{
+	color: white;
+	text-align: center;
+	margin-top: -3px;
 }
 
 .image-box {
@@ -219,16 +221,13 @@ input, textarea {
 	bottom: 0;
 	z-index: 100000;
 	display: -webkit-box;
-	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
 	opacity: 0;
 	-webkit-box-pack: center;
-	-webkit-justify-content: center;
 	-ms-flex-pack: center;
 	justify-content: center;
 	-webkit-box-align: center;
-	-webkit-align-items: center;
 	-ms-flex-align: center;
 	align-items: center;
 	padding: 1% 3%;
@@ -239,20 +238,16 @@ input, textarea {
 .black {
 	width: 100%;
 	display: -webkit-box;
-	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: center;
-	-webkit-justify-content: center;
 	-ms-flex-pack: center;
 	justify-content: center;
 	-webkit-box-align: center;
-	-webkit-align-items: center;
 	-ms-flex-align: center;
 	align-items: center;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	-webkit-flex-direction: column;
 	-ms-flex-direction: column;
 	flex-direction: column;
 }
@@ -268,10 +263,9 @@ input, textarea {
 .black h2{
 	width: 100%;
 	text-align: center;
-	color: green;
-	font-weight: bold;
+	color: limegreen;
+	font-weight: 400;
 	letter-spacing: 4px;
-	text-shadow: 1px 1px 5px white;
 }
 .black h1 {
 	font-size: 6rem;
@@ -317,23 +311,25 @@ td{
 		cursor: pointer;
 	}
 @media(max-width: 767px){
+	#image-heading{
+		color: white;
+		text-align: center;
+		font-size: 2rem;
+		margin-top: -10px;
+	}
 .black {
 	width: 100%;
 	display: -webkit-box;
-	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: center;
-	-webkit-justify-content: center;
 	-ms-flex-pack: center;
 	justify-content: center;
 	-webkit-box-align: center;
-	-webkit-align-items: center;
 	-ms-flex-align: center;
 	align-items: center;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	-webkit-flex-direction: column;
 	-ms-flex-direction: column;
 	flex-direction: column;
 }
@@ -377,7 +373,7 @@ td{
   display: none; }
 
 .info-tag p {
-  font-size: 1rem;
+  font-size: 1.1rem;
   letter-spacing: 2px;
   margin-top: 10px; 
 }
@@ -391,7 +387,9 @@ td{
 		margin: 1px;
 	}
 	header {
-		background-image: url(assets/images/mobile-header.png);
+		background-image: url(assets/images/mobile-header-min.png);
+		background-size: cover;
+		background-position: bottom;
 	}
 	.site{
 		margin-bottom: 0;
@@ -408,19 +406,15 @@ td{
 	.mobile-footer .address,
 	.mobile-footer .mid{
 		display: -webkit-box;
-		display: -webkit-flex;
 		display: -ms-flexbox;
 		display: flex;
-		-webkit-justify-content: space-around;
 		-ms-flex-pack: distribute;
 		justify-content: space-around;
 		-webkit-box-align: center;
-		-webkit-align-items: center;
 		-ms-flex-align: center;
 		align-items: center;
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
-		-webkit-flex-direction: column;
 		-ms-flex-direction: column;
 		flex-direction: column;
 	}
